--- a/packages/components/src/styles/Menu.module.css
+++ b/packages/components/src/styles/Menu.module.css
@@ -101,6 +101,10 @@
   grid-area: check;
 }
 
+.checkbox {
+  margin: 0;
+}
+
 .submenu {
   grid-area: submenu;
   margin-left: auto;
